test/Vehicle/Test/CompileMode/Error/TypingErrors/incorrectTensorLength.vcl
tensor : Tensor Nat [2]
tensor = [1]